--- a/About-Us.html
+++ b/About-Us.html
@@ -195,11 +195,14 @@
 
     </div>
 
-    <nav class="navbar bg-info text-dark navbar-expand-lg  sticky-top">
+    <nav class="navbar text-dark navbar-expand-lg  sticky-top">
 
         <div class="container-floid container-fluid">
 
-            <a class="navbar-brand" href="index.html"><img src="img/Vector.png" class="vector-img-logo" alt="Vector"></a>
+            <a class="navbar-brand link-logo-new" href="index.html">
+                <img src="img/steering-wheel-icon.svg" alt="" class="vector-img-logo" >
+                <img src="img/logo-nobackground.png" class="background-img-logo" alt="Vector">
+            </a>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -216,7 +219,7 @@
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
 
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        <a class="nav-link dropdown-toggle" href="?" id="navbarDropdown" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
                             home
                         </a>
@@ -239,7 +242,8 @@
                             <li><a class="dropdown-item" href="Models-Cars.html">Models-Cars</a></li>
                             <li><a class="dropdown-item" href="car-profile.html">Car Profile</a></li>
                             <li><a class="dropdown-item" href="car-detail.html">Cars Detail</a></li>
-                            <li><a class="dropdown-item" href="create-route-notification.html">Route Notification</a></li>
+                            <li><a class="dropdown-item" href="create-route-notification.html">Route Notification</a>
+                            </li>
                             <li><a class="dropdown-item" href="submit-car-intro.html">Submit Car Introduction</a></li>
                             <li><a class="dropdown-item" href="submit-car-for-rent.html">Submit Car For Rent</a></li>
 
@@ -420,79 +424,77 @@
         </div>
     </section>
 
-    <footer class=" footer-bootstrap-v5">
+    <footer class=" footer-bootstrap-v5 mt-5">
 
         <div class="row ms-0 me-0">
 
-                <div class="col-lg-4 col-md-6 col-sm-12">
+            <div class="col-lg-4 col-md-6 col-sm-12">
 
-                    <div class="logo-footer mt-3 mb-3">
+                <div class="logo-footer mt-3 mb-3">
 
-                        <img src="img/‏‏Vector-footer.png" alt="Vector-footer">
+                    <img src="img/‏‏Vector-footer.png" alt="Vector-footer">
 
+                </div>
+
+                <div class="d-flex download-fluter  mt-3 mb-3">
+
+                    <div class="image-link-one">
+                        <img src="img/box1-download-links-AppStore.webp" class=" mt-2 mb-2" alt="AppStore">
                     </div>
 
-                    <div class="d-flex download-fluter  mt-3 mb-3">
+                    <div class="image-link-one">
+                        <img src="img/box2-download-links-google-play.webp" class=" mt-2 mb-2" alt="AppStore">
+                    </div>
 
-                        <div class="image-link-one">
-                            <img src="img/box1-download-links-AppStore.webp" class=" mt-2 mb-2" alt="AppStore">
-                        </div>
-
-                        <div class="image-link-one">
-                            <img src="img/box2-download-links-google-play.webp" class=" mt-2 mb-2" alt="AppStore">
-                        </div>
-
-                        <div class="image-link-one">
-                            <img src="img/box3-download-links-android.webp" class=" mt-2 mb-2" alt="AppStore">
-                        </div>
-
+                    <div class="image-link-one">
+                        <img src="img/box3-download-links-android.webp" class=" mt-2 mb-2" alt="AppStore">
                     </div>
 
                 </div>
 
-                <div class="col-lg-4 col-md-6 col-sm-12">
+            </div>
 
-                    <div class="phone-whatsapp mt-3 mb-3">
+            <div class="col-lg-4 col-md-6 col-sm-12">
 
-                        <h2 class="h2ourpage"><a href="#">+20 100 885 4383</a></h2>
-                        <h2 class="h2ourpage"><a href="#">+20 101 555 8628</a></h2>
-                        <h2 class="h2ourpage"><a href="#">+20 111 128 9180⁩</a></h2>
-                        <h2 class="h2ourpage"><a href="#">+20 0115 214 8220</a></h2>
+                <div class="phone-whatsapp mt-3 mb-3">
 
-                    </div>
-
-
+                    <h2 class="h2ourpage"><a href="#">+20 100 885 4383</a></h2>
+                    <h2 class="h2ourpage"><a href="#">+20 0115 214 8220</a></h2>
 
                 </div>
 
-                <div class="col-lg-4 col-md-6 col-sm-12">
-
-                    <div class="icons-goto-pages ">
-
-                        <ul class="this-list-ourpages mt-3 mb-3 d-flex align-items-center justify-content-between">
-
-                            <li class="ABOUT-US-OURPAES">
-                                <a href="" class="goto-like-page">
-                                    <i class="fa-brands fa-facebook-f" style="color: #376ed3; font-size: 30px;"></i></a>
-                            </li>
-
-                            <li class="ABOUT-US-OURPAES">
-                                <a href="" class="goto-like-page">
-                                    <i class="fa-brands fa-twitter" style="color: #376ed3; font-size: 30px;"></i></a>
-                            </li>
-
-                            <li class="ABOUT-US-OURPAES">
-                                <a href="" class="goto-like-page">
-                                    <i class="fa-brands fa-instagram" style="color: #376ed3; font-size: 30px;"></i></a>
-                            </li>
-
-                        </ul>
-
-                    </div>
 
 
+            </div>
+
+            <div class="col-lg-4 col-md-6 col-sm-12">
+
+                <div class="icons-goto-pages ">
+
+                    <ul class="this-list-ourpages mt-3 mb-3 d-flex align-items-center justify-content-between">
+
+                        <li class="ABOUT-US-OURPAES">
+                            <a href="" class="goto-like-page">
+                                <i class="fa-brands fa-facebook-f" style="color: #376ed3; font-size: 30px;"></i></a>
+                        </li>
+
+                        <li class="ABOUT-US-OURPAES">
+                            <a href="" class="goto-like-page">
+                                <i class="fa-brands fa-twitter" style="color: #376ed3; font-size: 30px;"></i></a>
+                        </li>
+
+                        <li class="ABOUT-US-OURPAES">
+                            <a href="" class="goto-like-page">
+                                <i class="fa-brands fa-instagram" style="color: #376ed3; font-size: 30px;"></i></a>
+                        </li>
+
+                    </ul>
 
                 </div>
+
+
+
+            </div>
 
 
             <div class="row container-fluid">
@@ -542,6 +544,15 @@
             document.documentElement.scrollTop = 0;
             myButton.style.transition = '3s';
         }
+
+        document.addEventListener('scroll', () => {
+            const header = document.querySelector('.navbar');
+            if (window.scrollY > 0) {
+                header.classList.add('stickyTop');
+            } else {
+                header.classList.remove('stickyTop');
+            }
+        });
     </script>
 
 </body>
