--- a/profile-driver.html
+++ b/profile-driver.html
@@ -63,8 +63,10 @@
 
         <div class="container-floid container-fluid">
 
-            <a class="navbar-brand link-logo-new" href="index.html"><img src="img/us logn-new.PNG"
-                    class="vector-img-logo" alt="Vector"></a>
+            <a class="navbar-brand link-logo-new" href="index.html">
+                <img src="img/Vector.png" alt="" class="vector-img-logo">
+                <img src="img/logo-nobackground.png" class="background-img-logo" alt="Vector">
+            </a>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -177,7 +179,6 @@
         </div>
     </nav>
 
-
     <section id="about-me">
 
         <div class="about-me">
@@ -269,6 +270,7 @@
 
             <section id="CLIENTS">
                 <div id="displayCLIENTS">
+                    
                     <div class="Client1-carry">
                         <div id="img-logo-inher">
                             <div class="img-uslogo">
@@ -277,137 +279,110 @@
                         </div>
                     </div>
 
-                    <div class="marginto-clients">
+                    <div id="carouselExampleCaptions" class="carousel slide position-relative" data-bs-ride="carousel">
+                        <!-- carousel-item active carousel-caption d-none d-md-block carousel slide-->
+                        <div class="carousel-inner">
 
-                        <div class="clientprofileaboutus fadep" id="blayes">
-                            <div class="image-client-profile">
-                                <img src="img/icon_1_a9a66a0fc3.png" alt="client1" class="img-profile">
+                            <div class="carousel-item active">
+                                <div class="image-client-profile">
+                                    <i class="fa-solid fa-car img-profile"></i>
+                                </div>
+
+                                <div class="carousel-caption show d-none d-md-block mt-3">
+                                    <p class="my-address">Choose your ride</p>
+
+                                    <p class="words-ride">Select from a wide range of options and get your ride within
+                                        minutes, or schedule one for later.
+                                    </p>
+                                </div>
                             </div>
 
-                            <div class="pofclients">
-                                <p class="my-address"> Choose your ride</p>
+                            <div class="carousel-item ">
+                                <div class="image-client-profile">
+                                    <i class="fa-solid fa-mobile-screen-button img-profile"></i>
+                                </div>
 
-                                <p class="words-ride">Select from a wide range of options and get your ride within
-                                    minutes,
-                                    or schedule one for later.</p>
-                            </div>
-                        </div>
-                        <!-- ــــــــــــــــــــــــــــــــــــــــــــــــــ -->
+                                <div class="carousel-caption show d-none d-md-block  mt-3">
+                                    <p class="my-address">Track your ride</p>
 
-                        <div class="clientprofileaboutus fadep" style="display: none;">
-                            <div class="image-client-profile">
-                                <img src="img/icon_2_61168d4d4f.png" alt="client1" class="img-profile">
-                            </div>
-
-                            <div class="pofclients">
-                                <p class="my-address">Track your ride</p>
-
-                                <p class="words-ride">Track your ride in real time from the moment a Captain is
-                                    assigned
-                                    until you arrive at your destination..</p>
-                            </div>
-                        </div>
-
-
-                        <!-- ـــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــ -->
-
-                        <div class="clientprofileaboutus fadep" style="display: none;">
-                            <div class="image-client-profile">
-                                <img src="img/icon_3_0d1b81d8e7.png" alt="client1" class="img-profile">
+                                    <p class="words-ride">Track your ride in real time from the moment a Captain is
+                                        assigned until you arrive at your destination.
+                                    </p>
+                                </div>
                             </div>
 
-                            <div class="pofclients">
-                                <p class="my-address">Pay securely</p>
+                            <div class="carousel-item ">
+                                <div class="image-client-profile">
+                                    <i class="fa-solid fa-credit-card img-profile"></i>
+                                </div>
 
-                                <p class="words-ride">Card, Careem Pay, Apple Pay or cash; you can pay securely on
-                                    Careem.Card, Careem Pay, Apple Pay or cash;
-                                </p>
-                            </div>
-                        </div>
+                                <div class="carousel-caption show d-none d-md-block  mt-3">
+                                    <p class="my-address">Pay securely</p>
 
-                        <!-- ــــــــــــــــــــــــــــــــــــــــــــــــــ -->
-
-                        <div class="clientprofileaboutus fadep" style="display: none;">
-                            <div class="image-client-profile">
-                                <img src="img/Icon_4_bcec90dd12.png" alt="client1" class="img-profile">
+                                    <p class="words-ride">Card, Careem Pay, Apple Pay or cash; you can pay securely on
+                                        Careem.Card, Careem Pay, Apple Pay or cash;
+                                    </p>
+                                </div>
                             </div>
 
-                            <div class="pofclients">
-                                <p class="my-address">Return</p>
+                            <div class="carousel-item ">
+                                <div class="image-client-profile">
+                                    <i class="fa-solid fa-rotate-left img-profile"></i>
+                                </div>
 
-                                <p class="words-ride">Dock your bike at any Careem BIKE station; wait for the green
-                                    light
-                                    and buzzer sound to make sure it’s locked.</p>
-                            </div>
-                        </div>
+                                <div class="carousel-caption show d-none d-md-block  mt-3">
+                                    <p class="my-address">Return</p>
 
-                        <!-- ــــــــــــــــــــــــــــــــــــــــــــــــــ -->
-
-                        <div class="clientprofileaboutus fadep" style="display: none;">
-                            <div class="image-client-profile">
-                                <img src="img/icon_5_dd8d59ffbf.png" alt="client1" class="img-profile">
+                                    <p class="words-ride">Dock your bike at any Careem BIKE station; wait for the green
+                                        light and buzzer sound to make sure it’s locked.
+                                    </p>
+                                </div>
                             </div>
 
-                            <div class="pofclients">
-                                <p class="my-address">Unlock and ride </p>
+                            <div class="carousel-item ">
+                                <div class="image-client-profile">
+                                    <i class="fa-solid fa-bicycle img-profile"></i>
+                                </div>
 
-                                <p class="words-ride">Download the Careem app, select Bike, and find a station.
-                                    Unlock the
-                                    bike by scanning the QR code, and you’re set!</p>
+                                <div class="carousel-caption show d-none d-md-block  mt-3">
+                                    <p class="my-address">Unlock and ride</p>
+
+                                    <p class="words-ride">Download the Careem app, select Bike, and find a station.
+                                        Unlock the bike by scanning the QR code, and you’re set!
+                                    </p>
+                                </div>
                             </div>
 
-                        </div>
+                            <div class="carousel-item ">
+                                <div class="image-client-profile">
+                                    <i class="fa-solid fa-percent img-profile"></i>
+                                </div>
 
-                        <!-- ــــــــــــــــــــــــــــــــــــــــــــــــــ -->
+                                <div class="carousel-caption show d-none d-md-block  mt-3">
+                                    <p class="my-address">Save up to 40%</p>
 
-                        <div class="clientprofileaboutus fadep" style="display: none;">
-                            <div class="image-client-profile">
-                                <img src="img/icon_6_d94dae23bf.png" alt="client1" class="img-profile">
-                            </div>
-
-                            <div class="pofclients">
-                                <p class="my-address">Save up to 40% </p>
-
-                                <p class="words-ride">Extra savings with no peak charges and regulator fees on
-                                    package rides regulator fees on package rides.
-                                </p>
+                                    <p class="words-ride">Extra savings with no peak charges and regulator fees on
+                                        package rides
+                                    </p>
+                                </div>
                             </div>
 
                         </div>
 
-                        <!-- ــــــــــــــــــــــــــــــــــــــــــــــــــ -->
+                        <button class="carousel-control-prev sliderdriverprev" type="button"
+                            data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                        </button>
 
-                        <div class="clientprofileaboutus fadep" style="display: none;">
-                            <div class="image-client-profile">
-                                <img src="img/Icon_7_fe06bbec5.png" alt="client1" class="img-profile">
-                            </div>
-
-                            <div class="pofclients">
-                                <p class="my-address">Your kids are in the safest hands </p>
-
-                                <p class="words-ride">Real-time tracking and notifications to keep you updated on
-                                    your you updated on child’s</p>
-                            </div>
-
-                        </div>
-
-                        <div class="buttons-move-RightAndLeft">
-                            <a class="Prevcients" onclick="plUsClients(-1)">❮</a>
-                            <a class="Nextcients" onclick="plUsClients(1)">❯</a>
-                        </div>
-
+                        <button class="carousel-control-next sliderdrivernext" type="button"
+                            data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                        </button>
                     </div>
 
-                    <div style="text-align:center">
-                        <span class="clickafterprofile" onclick="currentPlients(1)"></span>
-                        <span class="clickafterprofile" onclick="currentPlients(2)"></span>
-                        <span class="clickafterprofile" onclick="currentPlients(3)"></span>
-                        <span class="clickafterprofile" onclick="currentPlients(4)"></span>
-                        <span class="clickafterprofile" onclick="currentPlients(5)"></span>
-                        <span class="clickafterprofile" onclick="currentPlients(6)"></span>
-                        <span class="clickafterprofile" onclick="currentPlients(7)"></span>
-                    </div>
-
+                </div>
 
             </section>
 
@@ -467,7 +442,7 @@
     </section>
 
     <!-- subhead -->
-    <footer class=" footer-bootstrap-v5">
+    <footer class=" footer-bootstrap-v5 mt-5">
 
         <div class="row ms-0 me-0">
 
@@ -502,8 +477,6 @@
                 <div class="phone-whatsapp mt-3 mb-3">
 
                     <h2 class="h2ourpage"><a href="#">+20 100 885 4383</a></h2>
-                    <h2 class="h2ourpage"><a href="#">+20 101 555 8628</a></h2>
-                    <h2 class="h2ourpage"><a href="#">+20 111 128 9180⁩</a></h2>
                     <h2 class="h2ourpage"><a href="#">+20 0115 214 8220</a></h2>
 
                 </div>
@@ -591,6 +564,15 @@
             document.documentElement.scrollTop = 0;
             myButton.style.transition = '3s';
         }
+
+        document.addEventListener('scroll', () => {
+            const header = document.querySelector('.navbar');
+            if (window.scrollY > 0) {
+                header.classList.add('stickyTop');
+            } else {
+                header.classList.remove('stickyTop');
+            }
+        });
     </script>
 
     <script src="js/date-picker.js"></script>
