--- a/Registeruser.html
+++ b/Registeruser.html
@@ -175,122 +175,124 @@
 
 </div>
 
-<nav class="navbar bg-info text-dark navbar-expand-lg  sticky-top">
+<nav class="navbar text-dark navbar-expand-lg  sticky-top">
 
-    <div class="container-floid container-fluid">
+  <div class="container-floid container-fluid">
 
-        <a class="navbar-brand" href="index.html"><img src="img/Vector.png" class="vector-img-logo"
-                alt="Vector"></a>
+      <a class="navbar-brand link-logo-new" href="index.html">
+          <img src="img/steering-wheel-icon.svg" alt="" class="vector-img-logo" >
+          <img src="img/logo-nobackground.png" class="background-img-logo" alt="Vector">
+      </a>
 
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-            aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+          aria-label="Toggle navigation">
 
-            <i class="fa-solid fa-bars"></i>
+          <i class="fa-solid fa-bars"></i>
 
-            <!-- <span class="navbar-toggler-icon"></span> -->
+          <!-- <span class="navbar-toggler-icon"></span> -->
 
-        </button>
+      </button>
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
-            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
 
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                        data-bs-toggle="dropdown" aria-expanded="false">
-                        home
-                    </a>
+              <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="?" id="navbarDropdown" role="button"
+                      data-bs-toggle="dropdown" aria-expanded="false">
+                      home
+                  </a>
 
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
 
-                        <li><a class="dropdown-item" href="index after login.html">index after login</a></li>
+                      <li><a class="dropdown-item" href="index after login.html">index after login</a></li>
 
-                    </ul>
+                  </ul>
 
-                </li>
+              </li>
 
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                        data-bs-toggle="dropdown" aria-expanded="false">
-                        Cars </a>
+              <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                      data-bs-toggle="dropdown" aria-expanded="false">
+                      Cars </a>
 
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
 
-                        <li><a class="dropdown-item" href="Models-Cars.html">Models-Cars</a></li>
-                        <li><a class="dropdown-item" href="car-profile.html">Car Profile</a></li>
-                        <li><a class="dropdown-item" href="car-detail.html">Cars Detail</a></li>
-                        <li><a class="dropdown-item" href="create-route-notification.html">Route Notification</a>
-                        </li>
-                        <li><a class="dropdown-item" href="submit-car-intro.html">Submit Car Introduction</a></li>
-                        <li><a class="dropdown-item" href="submit-car-for-rent.html">Submit Car For Rent</a></li>
+                      <li><a class="dropdown-item" href="Models-Cars.html">Models-Cars</a></li>
+                      <li><a class="dropdown-item" href="car-profile.html">Car Profile</a></li>
+                      <li><a class="dropdown-item" href="car-detail.html">Cars Detail</a></li>
+                      <li><a class="dropdown-item" href="create-route-notification.html">Route Notification</a>
+                      </li>
+                      <li><a class="dropdown-item" href="submit-car-intro.html">Submit Car Introduction</a></li>
+                      <li><a class="dropdown-item" href="submit-car-for-rent.html">Submit Car For Rent</a></li>
 
-                    </ul>
+                  </ul>
 
-                </li>
+              </li>
 
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                        data-bs-toggle="dropdown" aria-expanded="false">
-                        Our-Business
-                    </a>
+              <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                      data-bs-toggle="dropdown" aria-expanded="false">
+                      Our-Business
+                  </a>
 
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="Rides.html">Rides</a></li>
-                        <li><a class="dropdown-item" href="Taxi.html">Taxi</a></li>
-                        <li><a class="dropdown-item" href="motor-bike.html">motor-bike</a></li>
-                        <li><a class="dropdown-item" href="Car-Rental.html">Car-Rental</a></li>
-                        <li><a class="dropdown-item" href="School-Rides.html">School-Rides</a></li>
-                    </ul>
+                  <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                      <li><a class="dropdown-item" href="Rides.html">Rides</a></li>
+                      <li><a class="dropdown-item" href="Taxi.html">Taxi</a></li>
+                      <li><a class="dropdown-item" href="motor-bike.html">motor-bike</a></li>
+                      <li><a class="dropdown-item" href="Car-Rental.html">Car-Rental</a></li>
+                      <li><a class="dropdown-item" href="School-Rides.html">School-Rides</a></li>
+                  </ul>
 
-                </li>
+              </li>
 
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                        data-bs-toggle="dropdown" aria-expanded="false">
-                        Profiles
-                    </a>
+              <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                      data-bs-toggle="dropdown" aria-expanded="false">
+                      Profiles
+                  </a>
 
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="profile-driver.html"> profile-driver</a></li>
-                        <li><a class="dropdown-item" href="profile-user.html">profile-user</a></li>
-                    </ul>
+                  <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                      <li><a class="dropdown-item" href="profile-driver.html"> profile-driver</a></li>
+                      <li><a class="dropdown-item" href="profile-user.html">profile-user</a></li>
+                  </ul>
 
-                </li>
+              </li>
 
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                        data-bs-toggle="dropdown" aria-expanded="false">
-                        More Pages
-                    </a>
+              <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                      data-bs-toggle="dropdown" aria-expanded="false">
+                      More Pages
+                  </a>
 
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="Services.html">Services</a></li>
-                        <li><a class="dropdown-item" href="About-Us.html">About-Us</a></li>
-                        <li><a class="dropdown-item" href="Contact-Us.html">Contact-Us</a></li>
-                        <li><a class="dropdown-item" href="Blog.html">Blog</a></li>
-                        <li><a class="dropdown-item" href="Our-Values.html">Our-Values</a></li>
-                        <li><a class="dropdown-item" href="Our-Effect.html">Our-Effect</a></li>
-                    </ul>
+                  <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                      <li><a class="dropdown-item" href="Services.html">Services</a></li>
+                      <li><a class="dropdown-item" href="About-Us.html">About-Us</a></li>
+                      <li><a class="dropdown-item" href="Contact-Us.html">Contact-Us</a></li>
+                      <li><a class="dropdown-item" href="Blog.html">Blog</a></li>
+                      <li><a class="dropdown-item" href="Our-Values.html">Our-Values</a></li>
+                      <li><a class="dropdown-item" href="Our-Effect.html">Our-Effect</a></li>
+                  </ul>
 
-                </li>
-            </ul>
+              </li>
+          </ul>
 
-        </div>
+      </div>
 
-        <div class="whatsapp">
-            <div class="Whatsapp1">
-                <span class="whatsapp2">
-                    <i class="fa-solid fa-phone"></i>
-                </span>
-                <div id="what-sapp">
-                    <p class="whatsapp3">Whatsapp now</p>
-                    <span class="span-phone">01152148220</span>
-                </div>
-            </div>
-        </div>
+      <div class="whatsapp">
+          <div class="Whatsapp1">
+              <span class="whatsapp2">
+                  <i class="fa-solid fa-phone"></i>
+              </span>
+              <div id="what-sapp">
+                  <p class="whatsapp3">Whatsapp now</p>
+                  <span class="span-phone">01152148220</span>
+              </div>
+          </div>
+      </div>
 
-    </div>
+  </div>
 </nav>
 
   <section class="section-registerdriver">
@@ -325,8 +327,8 @@
     </div>
   </section>
 
-    <!-- subhead -->
-    <footer class=" footer-bootstrap-v5">
+    <!-- footer -->
+    <footer class=" footer-bootstrap-v5 mt-5">
 
       <div class="row ms-0 me-0">
 
@@ -361,8 +363,6 @@
               <div class="phone-whatsapp mt-3 mb-3">
 
                   <h2 class="h2ourpage"><a href="#">+20 100 885 4383</a></h2>
-                  <h2 class="h2ourpage"><a href="#">+20 101 555 8628</a></h2>
-                  <h2 class="h2ourpage"><a href="#">+20 111 128 9180⁩</a></h2>
                   <h2 class="h2ourpage"><a href="#">+20 0115 214 8220</a></h2>
 
               </div>
@@ -424,7 +424,7 @@
 
       </div>
 
-  </footer>
+    </footer>
 
   <!-- button go to top -->
   <button onclick="topFunction()" id="gototop"><i class="fa-solid fa-chevron-up"></i></button>
@@ -450,6 +450,15 @@
           document.documentElement.scrollTop = 0;
           myButton.style.transition = '3s';
       }
+
+      document.addEventListener('scroll', () => {
+            const header = document.querySelector('.navbar');
+            if (window.scrollY > 0) {
+                header.classList.add('stickyTop');
+            } else {
+                header.classList.remove('stickyTop');
+            }
+        });
   </script>
 
   <script src="js/date-picker.js"></script>
