--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <div class="container-floid container-fluid">
 
             <a class="navbar-brand link-logo-new" href="index.html">
-                <img src="img/Vector.png" alt="" class="vector-img-logo" >
+                <img src="img/steering-wheel-icon.svg" alt="" class="vector-img-logo" >
                 <img src="img/logo-nobackground.png" class="background-img-logo" alt="Vector">
             </a>
 
@@ -988,7 +988,7 @@
     </section>
     <!-- section Looking-for-ride -->
 
-    <!-- section this-brand-car-web carousel-->
+    <!-- section this-brand-car-web carousel slide-->
     <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
 
         <div class="carousel-indicators">
@@ -1142,7 +1142,7 @@
     </section>
     <!-- ICONS-PLACEHOLDER /-->
 
-    <footer class=" footer-bootstrap-v5">
+    <footer class=" footer-bootstrap-v5 ">
 
         <div class="row ms-0 me-0">
 
