--- a/submit-car-for-rent.html
+++ b/submit-car-for-rent.html
@@ -269,12 +269,14 @@
 
     </div>
 
-    <nav class="navbar bg-info text-dark navbar-expand-lg  sticky-top">
+    <nav class="navbar text-dark navbar-expand-lg  sticky-top">
 
         <div class="container-floid container-fluid">
 
-            <a class="navbar-brand" href="index.html"><img src="img/Vector.png" class="vector-img-logo"
-                    alt="Vector"></a>
+            <a class="navbar-brand link-logo-new" href="index.html">
+                <img src="img/steering-wheel-icon.svg" alt="" class="vector-img-logo" >
+                <img src="img/logo-nobackground.png" class="background-img-logo" alt="Vector">
+            </a>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -291,7 +293,7 @@
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
 
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        <a class="nav-link dropdown-toggle" href="?" id="navbarDropdown" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
                             home
                         </a>
@@ -792,106 +794,104 @@
             </div>
     </section>
 
-    <!-- subhead -->
-    <footer class=" footer-bootstrap-v5 mt-2">
+    <!-- footer -->
+    <footer class=" footer-bootstrap-v5 mt-5">
 
         <div class="row ms-0 me-0">
-
+  
             <div class="col-lg-4 col-md-6 col-sm-12">
-
+  
                 <div class="logo-footer mt-3 mb-3">
-
+  
                     <img src="img/‏‏Vector-footer.png" alt="Vector-footer">
-
+  
                 </div>
-
+  
                 <div class="d-flex download-fluter  mt-3 mb-3">
-
+  
                     <div class="image-link-one">
                         <img src="img/box1-download-links-AppStore.webp" class=" mt-2 mb-2" alt="AppStore">
                     </div>
-
+  
                     <div class="image-link-one">
                         <img src="img/box2-download-links-google-play.webp" class=" mt-2 mb-2" alt="AppStore">
                     </div>
-
+  
                     <div class="image-link-one">
                         <img src="img/box3-download-links-android.webp" class=" mt-2 mb-2" alt="AppStore">
                     </div>
-
+  
                 </div>
-
+  
             </div>
-
+  
             <div class="col-lg-4 col-md-6 col-sm-12">
-
+  
                 <div class="phone-whatsapp mt-3 mb-3">
-
+  
                     <h2 class="h2ourpage"><a href="#">+20 100 885 4383</a></h2>
-                    <h2 class="h2ourpage"><a href="#">+20 101 555 8628</a></h2>
-                    <h2 class="h2ourpage"><a href="#">+20 111 128 9180⁩</a></h2>
                     <h2 class="h2ourpage"><a href="#">+20 0115 214 8220</a></h2>
-
+  
                 </div>
-
-
-
+  
+  
+  
             </div>
-
+  
             <div class="col-lg-4 col-md-6 col-sm-12">
-
+  
                 <div class="icons-goto-pages ">
-
+  
                     <ul class="this-list-ourpages mt-3 mb-3 d-flex align-items-center justify-content-between">
-
+  
                         <li class="ABOUT-US-OURPAES">
                             <a href="" class="goto-like-page">
                                 <i class="fa-brands fa-facebook-f" style="color: #376ed3; font-size: 30px;"></i></a>
                         </li>
-
+  
                         <li class="ABOUT-US-OURPAES">
                             <a href="" class="goto-like-page">
                                 <i class="fa-brands fa-twitter" style="color: #376ed3; font-size: 30px;"></i></a>
                         </li>
-
+  
                         <li class="ABOUT-US-OURPAES">
                             <a href="" class="goto-like-page">
                                 <i class="fa-brands fa-instagram" style="color: #376ed3; font-size: 30px;"></i></a>
                         </li>
-
+  
                     </ul>
-
+  
                 </div>
-
-
-
+  
+  
+  
             </div>
-
-
+  
+  
             <div class="row container-fluid">
-
+  
                 <div class="col-lg-4 col-md-6 col-sm-12">
                     <p class="p-footer">Terms-Policy © 2023</p>
                 </div>
-
+  
                 <div class="col-lg-4 col-md-6 col-sm-12">
                     <button id="link-click-go-to">
                         <a href="Terms-of-Service.html" class="goto-like-top">Terms of Service</a>
                     </button>
                 </div>
-
+  
                 <div class="col-lg-4 col-md-6 col-sm-12">
                     <button id="link-click-go-to">
                         <a href="Privacy-Policy.html" class="goto-like-top">Privacy Policy</a>
                     </button>
                 </div>
-
+  
             </div>
-
-
+  
+  
         </div>
-
-    </footer>
+  
+      </footer>
 
     <!-- button go to top -->
     <button onclick="topFunction()" id="gototop"><i class="fa-solid fa-chevron-up"></i></button>
@@ -917,6 +917,15 @@
             document.documentElement.scrollTop = 0;
             myButton.style.transition = '3s';
         }
+
+        document.addEventListener('scroll', () => {
+            const header = document.querySelector('.navbar');
+            if (window.scrollY > 0) {
+                header.classList.add('stickyTop');
+            } else {
+                header.classList.remove('stickyTop');
+            }
+        });
     </script>
 
     <script src="js/date-picker.js"></script>
